frontend/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: frontend-ns
  labels:
    istio-injection: enabled
