frontend/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: curl-test
spec:
  containers:
  - name: curl
    image: curlimages/curl
    command: ["sleep", "3600"]

  securityContext:
    runAsNonRoot: true
    seccompProfile:
      type: RuntimeDefault
