frontend/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    app: flask-front-end
    app.kubernetes.io/component: flask-front-end
    app.kubernetes.io/instance: flask-front-end
    app.kubernetes.io/name: flask-front-end
    app.kubernetes.io/part-of: flask-front-end
    app.openshift.io/runtime-version: latest
  name: flask-front-end
  namespace: frontend-ns
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: flask-front-end
    weight: 100
  wildcardPolicy: None
